Added swipe indicator on first view in session

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -14,5 +14,8 @@
             "bash": "Bash",
             "brainfuck": "Brainfuck"
         }
+    },
+    "misc": {
+        "swipe": "Swipe to the next page"
     }
 }
