--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -14,5 +14,8 @@
             "bash": "Bash",
             "brainfuck": "Brainfuck"
         }
+    },
+    "misc": {
+        "swipe": "Wische zur nächsten Seite"
     }
 }
