Added logo animation before intro and blurry background for title and pagination

--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -1,6 +1,8 @@
 {
     "intro": {
-        "info": "Student, Entwickler, Zukünftiger IT-Sicherheit Experte"
+        "info": "Student, Entwickler, Zukünftiger IT-Sicherheit Experte",
+        "skip": "Überspringen",
+        "hintClick": "Klick mich!"
     },
     "aboutme": {
         "title": "Über mich",
