--- a/public/locales/de.json
+++ b/public/locales/de.json
@@ -164,6 +164,47 @@
             }
         }
     },
+    "cv": {
+        "title": "Lebenslauf",
+        "type": {
+            "abitur": "Abitur",
+            "minijob": "Minijob",
+            "bachelor": "B. Sc. Informatik",
+            "master": "M. Sc. IT-Sicherheit",
+            "hiwi": "Studentische Hilfskraft",
+            "freelance": "Freiberuflich"
+        },
+        "noDate": "bis heute",
+        "abitur": {
+            "title": "Gutenberg Gymnasium Mainz",
+            "description": "Leistungskurse:<ul><li>Mathematik: </li><li>Physik: </li><li>Englisch: </li></ul>"
+        },
+        "moebelmartin": {
+            "title": "Möbel Martin",
+            "description": "Nichts weiter als ein paar Möbel schleppen"
+        },
+        "bachelor": {
+            "title": "TU Darmstadt",
+            "description": "Wahlbereiche: Robotik, IT-Sicherheit<br/> Abschluss: <b>1.6</b>"
+        },
+        "trutzbox": {
+            "title": "Comidio GmbH",
+            "description": "Frontend Entwickler für das Admin Interface der TrutzBox. Veraltete Frontend wurde von mir von Grund auf in ReactJs in einem modernen Style neu aufgebaut"
+        },
+        "c++": {
+            "title": "HiWi an der TU Darmstadt",
+            "description": "Ich war eine studentische Hilfskraft für das Module \"C/C++ Programmierpraktikum\". In einem Team haben wir neue Übungsaufgaben erstellt um Studenten saubere Entwicklung mit C/C++ beizubringen"
+        },
+        "psaf": {
+            "title": "HiWi an der HiWi an der TU Darmstadt",
+            "description": "Als studentische Hilfskraft bin ich hier Ansprechpartner für die Studenten, sowie für die Wartung und Weiterentwicklung der benutzten Autos und Software zuständig."
+        },
+        "master": {
+            "title": "TU Darmstadt",
+            "description": "Mein derzeitiges Studium über IT-Sicherheit. Hier lerne ich von Informationssicherheitssystemen, über technische System und Softwaresicherheit bis zu moderner Kryptographie, eine Menge über IT-Sicherheit."
+        },
+        "revealAll": "Alles zeigen"
+    },
     "legal": {
         "title": "Legales"
     },
